--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "OSL-3.0",
     "version": "4.3.1",
     "require": {
-        "php": ">=8.0 <8.3",
+        "php": ">=8.0",
         "tweakwise/magento2-tweakwise": "^5.7.4",
         "emico/m2-attributelanding": "^4.1"
     },
