--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "version": "4.3.1",
     "require": {
         "php": ">=8.0",
-        "tweakwise/magento2-tweakwise": "^5.7.4",
+        "tweakwise/magento2-tweakwise": "^5.7.4|^6.0",
         "emico/m2-attributelanding": "^4.1"
     },
     "require-dev": {
